engine/tests/fixtures/invalid/docs/entity-doc-dummy.tg
entity entity_doc_dummy {
  name "Doc Dummy"
  description "Dummy entity for invalid doc fixtures"
  fields {
    id uuid required
  }
  status active
}
